--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -24,7 +24,7 @@ body{
     margin:0;
 }
 /* paragraph homepage */
-.container p{
+#slogan{
     font-family: 'Dancing Script', Arial, Helvetica, sans-serif; 
     font-size: 50px;
     color: #fbffa8; 
@@ -66,4 +66,56 @@ hr{
 .button:hover{
     background: #00818a;
     font-weight: bold;
+}
+/* signin form begins here*/
+.signin{
+    position: relative;
+    margin:0;
+}
+.signin h1{
+    padding: 0;
+
+}
+/* login wrapper */
+.container .wrapper{
+    width: 60%;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 100px 100px 10px 100px;
+    margin: auto;
+    box-sizing: border-box;
+    margin-top: 100px; 
+    box-shadow: -1px -1px 58px 2px rgba(0,129,138,1);  
+}
+.container .wrapper p{
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 136px;
+}
+.container .wrapper p a{
+    text-decoration: none;
+    color: #00818a;
+}
+.container .wrapper p a:hover{
+    color: #74dac6;
+}
+/* signin-form */
+.signin-form button{
+    display: block;
+    
+}
+/* input */
+.input input{
+    border-radius: 25px;
+    padding: 10px 20px;
+    margin-top: 10px;
+    background: #f4f4f4;
+    border-color: transparent;
+    height: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.signin-submit .button{
+    margin-left: 270px;
+    margin-top: 20px;
+    width: 220px;
 }
