--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -266,3 +266,20 @@ div.input label{
 .profile .button{
     margin-top: 20px;    
 }
+/* VIEW ENTRY */
+.view-entry{
+    width: 50%;
+    float: left;
+}
+.view-entry h1{
+    font-size: 30px;
+    padding: 0;
+    margin:0;
+}
+.container .wrapper .view-entry p{
+    clear: both;
+    padding-top: 15px;
+    margin: 0;
+    text-align: left;
+    width: 100%;
+}
