--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -120,6 +120,7 @@ hr{
     background: #f4f4f4;
     border-color: transparent;
     height: 15px;
+    width: 180px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .signin-submit .button{
