Add Css syle for signin page

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -146,6 +146,11 @@ hr{
     padding-top: 20px;
     font-size: 15px;
 }
+.container .wrapper .signin p{
+    padding-top: 20px;
+    font-size: 15px;
+}
+
 
 /* NEW DIARY ENTRY */
 .container .wrapper .holder{
